--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,10 @@
   font-family: "Poppins", sans-serif;
 }
 
+body {
+  background: white;
+}
+
 /* Top header */
 .top-bar {
   background: linear-gradient(to right, #441342, #AA30A5);
@@ -143,7 +147,7 @@
 
 .main_banner {
   background: url(../image/banner/1.jpg) center center;
-  padding: 270px 45px 50px 45px;
+  padding: 350px 45px 50px 45px;
   background-size: cover;
 }
 
@@ -163,7 +167,7 @@
 }
 
 .main_banner .banner_newsletter_container input {
-  padding: 20px;
+  padding: 5px;
   color: #441342;
   border-radius: 0px 5px 5px 0px !important;
 }
@@ -185,11 +189,93 @@
   background: #70206e;
 }
 
+.below_banner {
+  background: linear-gradient(89.94deg, #441342 50.27%, #AA30A5 99.99%);
+  padding: 50px 20px;
+}
 
+.below_banner .below_b_items_container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 
+.below_banner .below_b_items_container .below_b_item span {
+  color: white;
+  font-weight: 600;
+  font-size: 22px;
+}
 
+.below_banner .below_b_items_container .below_b_item {
+  position: relative;
+  border-right: 1px solid white;
+  padding: 10px 120px;
+}
 
+.below_banner .below_b_items_container .below_b_item:last-child {
+  position: relative;
+  border: none;
+  padding: auto;
+}
 
+.our_services_section {
+  padding: 100px;
+}
+
+.our_services_section h2 {
+  font-size: 34px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.our_services_section .services_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  row-gap: 20px;
+}
+
+.our_services_section .services_container .service_box {
+  background-color: white;
+  box-shadow: 0 0 10px 0 #0000001a;
+  width: 24%;
+  border-radius: 20px;
+}
+
+.our_services_section .services_container .service_box .service_img,
+.our_services_section .services_container .service_box .service_content {
+  padding: 15px;
+}
+
+.our_services_section .services_container .service_box .service_img img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.our_services_section .services_container .service_box .service_content p {
+  margin-top: 10px;
+  color: #616161;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.our_services_section .services_container .service_box .service_read_more button {
+  width: 100%;
+  padding: 15px;
+  background: linear-gradient(90deg, #441342 0%, #AA30A5 100%);
+  border-radius: 0 0 10px 10px;
+  height: 100%;
+  color: white;
+  border: none;
+  transition: background 0.4s ease, transform 0.3s ease;
+}
+
+.our_services_section .services_container .service_box .service_read_more button:hover {
+  background: linear-gradient(90deg, #571855 0%, #c538c0 100%);
+  transform: translateY(-2px);
+}
 
 /*  */
 /* Mobile Responsive Css */
