--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@ body {
 }
 
 section {
-  padding: 50px 0;
 }
 
 /* Top header */
@@ -283,63 +282,41 @@ section {
   transform: translateY(-2px);
 }
 /* service page */
-.service-banner {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-}
-
-.banner-image {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-.banner-bottom-box {
-  position: absolute;
-  bottom: -50px; /* Half out of the image */
-  left: 50%;
-  transform: translateX(-100%);
+.training-card {
+  padding-left: 110px !important;
   background-color: #441342;
   color: white;
-  padding: 1.5rem;
-  width: 90%;
-  border-radius: 0.5rem;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  text-align: center;
+  padding: 2rem;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  margin-top: -50px;
+  z-index: 1;
+  position: relative;
+  width: 50%;
+  background: url('../image/title-box.svg');
 }
 
-.banner-bottom-box h2 {
-  margin: 0;
-  font-size: 1.2rem;
+.highlight-heading {
+  color: #441342;
+  font-weight: bold;
+  padding: 2rem 1rem;
 }
 
-.banner-bottom-box p {
-  margin-top: 0.5rem;
-  font-size: 0.95rem;
-}
-.banner-section{
-  background-image: url('../image/Title box.svg');
-}
-
-@media (min-width: 768px) {
-  .banner-bottom-box {
-    width: 50%;
-    padding: 2rem;
+@media (max-width: 767.98px) {
+  .training-card {
+    margin-top: -30px;
+    padding: 1.5rem;
+    width: 100%;
   }
 
-  .banner-bottom-box h2 {
-    font-size: 1.8rem;
-  }
-
-  .banner-bottom-box p {
-    font-size: 1.1rem;
+  .highlight-heading {
+    padding: 1.5rem 1rem;
+    font-size: 1.25rem;
   }
 }
-
-.home_testimonials {
-  padding: 50px 0;
-}
+/*  */
 
 .home_testimonials .testimonial_heading {
   background: #44134214;
